--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.daemon=false
 
 # Minecraft
 minecraft_version=1.20.2
-minecraft_dependency=>=1.20.2 <1.21
+minecraft_dependency=>=1.20.2 <1.20.3
 minecraft_suffix=mc1.20.2
 java_target=17
 java_dependency=>=17
 resource_pack_format=18
 
 # Fabric
-fabric_loader_version=0.14.22
+fabric_loader_version=0.15.11
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.89.0+1.20.2
+fabric_api_version=0.91.6+1.20.2
 fabric_api_dependency=*
 
 # Mixin
@@ -35,25 +35,21 @@ mod_main_class=PackedUp
 mod_client_class=PackedUpClient
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.20.2
 curseforge_project_id=361867
-curseforge_release_type=release
-curseforge_game_versions=1.20.2
 curseforge_required_dependency_ids=fabric-api supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=trinkets
-
-# Modrinth
-modrinth_project_id=packed-up-backpacks
-modrinth_release_type=release
-modrinth_game_versions=1.20.2
+modrinth_project_id=ZbFzEauY
 modrinth_required_dependency_ids=fabric-api supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=trinkets
 
 # Dependencies
-core_library_file=4763503
-core_library_dependency=>=1.1.0 <1.2.0
-config_library_file=4761788
-config_library_dependency=>=1.1.0
+core_library_file=5102290
+core_library_dependency=>=1.1.17 <1.2.0
+config_library_file=4785841
+config_library_dependency=>=1.1.6
 trinkets_file=4441758
 cardinal_components_base_file=4160617
 cardinal_components_entity_file=4160620
