--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.21
+minecraft_version=1.21.1
 minecraft_dependency=[1.21,1.22)
 minecraft_suffix=mc1.21
 java_target=21
@@ -11,7 +11,7 @@ java_dependency=>=21
 resource_pack_format=34
 
 # NeoForge
-neoforge_version=21.0.78-beta
+neoforge_version=21.1.31
 neoforge_dependency=[21.0.78-beta,)
 javafml_dependency=[1,)
 
@@ -35,7 +35,7 @@ maven_group=com.supermartijn642
 
 # Publishing
 publishing_release_type=stable
-publishing_game_versions=1.21
+publishing_game_versions=1.21 1.21.1
 curseforge_project_id=361867
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=curios
@@ -44,11 +44,11 @@ modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-conf
 modrinth_optional_dependency_ids=curios
 
 # Dependencies
-core_library_file=5102300
+core_library_file=5634367
 core_library_dependency=[1.1.17,1.2.0)
 config_library_file=5081550
 config_library_dependency=[1.1.6,)
 curios_file=5443145
 
 # Runtime mods
-just_enough_items_file=4473386
+just_enough_items_file=5676369
